# sted

./: CMakeLists.txt  README.md  main.c  sted.pc.in
src/: sted.c  sted.h
